syntax = "proto3";

package rivet.backend.pkg.party.msg.invite_create_complete;

import "proto/common.proto";

/// name = "msg-party-invite-create-complete"
/// parameters = [
/// 	{ name = "party_id" },
/// 	{ name = "invite_id" },
/// ]
message Message {
	rivet.common.Uuid party_id = 1;
	rivet.common.Uuid invite_id = 2;
	string token = 3;
}

